https://trello.com/c/qjpDynvT/392-tooltips-can-invisibly-overlay-the-ui-elements-become-unclickable Hackily Fixed

--- a/css/elements/_tooltip.css
+++ b/css/elements/_tooltip.css
@@ -1,3 +1,8 @@
+/* HACK: https://trello.com/c/qjpDynvT/392-tooltips-can-invisibly-overlay-the-ui-elements-become-unclickable */
+.tooltip {
+    pointer-events: none;
+}
+
 .tooltip-inner {
 
     .truncation-details > & {
